--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <a href="#" class="examples-card">
                     <h3 class="card-text">Can user complete a task in my software interface?</h3>
                 </a>
-                <a class="examples-card" href="#" style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 34.jpeg); background-size: cover;">
+                <a class="examples-card" href="#" style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(asset\ 34.jpeg); background-size: cover;">
                     <h3 class="card-text">Can users find important pages on my website?</h3>
                 </a>
                 <a class="examples-card" href="#">
