reorganized assets to a folder for better and simulated view

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <div class="container main-nav flex">
             <a href="#" class="company-logo">
-                <img src="asset 1.png" alt="company logo">
+                <img src="./assets/asset 1.png" alt="company logo">
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
@@ -49,7 +49,7 @@
                 <a href="#" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
-                <img src="asset 2.png" alt="hero image">
+                <img src="./assets/asset 2.png" alt="hero image">
             </div>
         </div>
     </header>
@@ -60,13 +60,13 @@
         <div class="container">
             <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make better design decisions.</div>
             <div class="logos flex">
-                <img class="logo" src="asset 3.png" alt="">
-                <img class="logo" src="asset 4.png" alt="">
-                <img class="logo" src="asset 5.png" alt="">
-                <img class="logo" src="asset 6.png" alt="">
-                <img class="logo" src="asset 7.png" alt="">
-                <img class="logo" src="asset 8.svg" alt="">
-                <img class="logo" src="asset 9.png" alt="">
+                <img class="logo" src="./assets/asset 3.png" alt="">
+                <img class="logo" src="./assets/asset 4.png" alt="">
+                <img class="logo" src="./assets/asset 5.png" alt="">
+                <img class="logo" src="./assets/asset 6.png" alt="">
+                <img class="logo" src="./assets/asset 7.png" alt="">
+                <img class="logo" src="./assets/asset 8.svg" alt="">
+                <img class="logo" src="./assets/asset 9.png" alt="">
             </div>
         </div>
     </section>
@@ -81,37 +81,37 @@
             </div>
             <div class="features-area flex">
                 <div class="features-card flex">
-                    <img src="asset 11.svg" alt="">
+                    <img src="./assets/asset 11.svg" alt="">
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="asset 13.svg" alt="">
+                    <img src="./assets/asset 13.svg" alt="">
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="asset 14.svg" alt="">
+                    <img src="./assets/asset 14.svg" alt="">
                     <h3>First click tests</h3>
                     <p>Test interaction with first click and navigation tests.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="asset 15.svg" alt="">
+                    <img src="./assets/asset 15.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="asset 16.svg" alt="">
+                    <img src="./assets/asset 16.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
-                    <img src="asset 17.svg" alt="">
+                    <img src="./assets/asset 17.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
@@ -125,7 +125,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="asset 18.png" alt="">
+                <img src="./assets/asset 18.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -138,7 +138,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
-                <img src="asset 21.png" alt="">
+                <img src="./assets/asset 21.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -151,7 +151,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="asset 24.png" alt="">
+                <img src="./assets/asset 24.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -201,7 +201,7 @@
     <footer>
         <div class="container flex footer-container">
             <a href="#" class="company-logo">
-                <img src="asset 1.png" alt="company logo">
+                <img src="./assets/asset 1.png" alt="company logo">
             </a>
             <div class="link-column flex">
                 <h4>Product</h4>
