Add pages folder

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#" class="hover-link">Customer</a></li>
                     <li><a href="#" class="hover-link">Pricing</a></li>
                     <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="#" class="hover-link secondary-button">Sign in</a></li>
-                    <li><a href="#" class="hover-link primary-button">Sign up</a></li>
+                    <li><a href="./pages/login.html" class="hover-link secondary-button">Login</a></li>
+                    <li><a href="./pages/signup.html" class="hover-link primary-button">Sign up</a></li>
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-link" id="nav-toggle">
