--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./styles/login.css">
 </head>
 <body>
     <div class="containers">
@@ -14,8 +14,8 @@
             <input type="text" id="signUpUsername" placeholder="Username" required>
             <input type="email" id="signUpEmail" placeholder="Email" required>
             <input type="password" id="signUpPassword" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
         </form>
+        <button type="submit" class="signin">Sign Up</button>
         <p id="signUpError" class="error-message"></p>
         <p>Already have an account? <a href="login.html">Sign In</a></p>
     </div>
