changed the styling of navbar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="company-logo">
                 <img src="./assets/asset 1.png" alt="company logo">
             </a>
-            <div class="nav-links" id="nav-links">
+            <div class="nav-links mobile-nav" id="nav-links">
                 <ul class="flex">
                     <li><a href="#" class="hover-link">Products</a></li>
                     <li><a href="#" class="hover-link">Customer</a></li>
