--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <div class="subfooter">
         <div class="container flex subfooter-container">
             <a class="hover-link" href="#">Privacy policy</a>
-            <a class="hover-link" href="#">Terms & Condition</a>
+            <a class="hover-link" href="#">Terms & Conditions</a>
             <a class="hover-link" href="#">Security Information</a>
             <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
