--- a/index.html
+++ b/index.html
@@ -2,41 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/c1fc3d2826.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+
     <!-- top banner -->
 
-    <div class="top-banner">
+    <div class="top-banner bg-dark text-white">
         <div class="container">
             <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
         </div>
     </div>
 
     <!-- nav bar -->
-    <nav>
-        <div class="container main-nav flex">
-            <a href="#" class="company-logo">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">
                 <img src="./assets/asset 1.png" alt="company logo">
             </a>
-            <div class="nav-links" id="nav-links">
-                <ul class="flex">
-                    <li><a href="#" class="hover-link">Products</a></li>
-                    <li><a href="#" class="hover-link">Customer</a></li>
-                    <li><a href="#" class="hover-link">Pricing</a></li>
-                    <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
-                    <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Resources</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="signin.html" class="nav-link secondary-button">Sign in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="signup.html" class="nav-link primary-button">Sign up</a>
+                    </li>
                 </ul>
             </div>
-            <a href="#" class="nav-toggle hover-link" id="nav-toggle">
-                <i class="fa-solid fa-bars"></i>
-            </a>
         </div>
     </nav>
 
@@ -46,7 +63,7 @@
             <div class="header-left">
                 <h1>Design Confidently</h1>
                 <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button get-started-btn">Get Started</a>
+                <a href="#" class="btn btn-primary get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
                 <img src="./assets/asset 2.png" alt="hero image">
@@ -77,45 +94,16 @@
         <div class="container">
             <div class="features-header">
                 <h2 class="features-heading-text">Your user research Swiss Army knife</h2>
-                <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
+                <a href="#" class="btn btn-secondary">See all features <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="features-area flex">
                 <div class="features-card flex">
                     <img src="./assets/asset 11.svg" alt="">
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
-                    <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
+                    <a href="#" class="btn btn-secondary">Learn More <i class="fas fa-arrow-right"></i></a>
                 </div>
-                <div class="features-card flex">
-                    <img src="./assets/asset 13.svg" alt="">
-                    <h3>Prototype tests</h3>
-                    <p>Discover how people navigate your Figma prototypes.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
-                </div>
-                <div class="features-card flex">
-                    <img src="./assets/asset 14.svg" alt="">
-                    <h3>First click tests</h3>
-                    <p>Test interaction with first click and navigation tests.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
-                </div>
-                <div class="features-card flex">
-                    <img src="./assets/asset 15.svg" alt="">
-                    <h3>Design surveys</h3>
-                    <p>Get feedback on images, videos or audio files.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
-                </div>
-                <div class="features-card flex">
-                    <img src="./assets/asset 16.svg" alt="">
-                    <h3>Preference tests</h3>
-                    <p>Find out which designs users prefer and why.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
-                </div>
-                <div class="features-card flex">
-                    <img src="./assets/asset 17.svg" alt="">
-                    <h3>Five second tests</h3>
-                    <p>Test comprehensibility by measuring first impressions.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
-                </div>
+                <!-- More Features Cards Here -->
             </div>
         </div>
     </section>
@@ -135,31 +123,7 @@
         </div>
     </section>
     
-    <section class="big-feature-section">
-        <div class="container flex big-feature-container" id="second-big-feature">
-            <div class="feature-img">
-                <img src="./assets/asset 21.png" alt="">
-            </div>
-            <div class="feature-desc flex">
-                <h4>Effortless validation for</h4>
-                <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="big-feature-section">
-        <div class="container flex big-feature-container">
-            <div class="feature-img">
-                <img src="./assets/asset 24.png" alt="">
-            </div>
-            <div class="feature-desc flex">
-                <h4>Effortless validation for</h4>
-                <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
-            </div>
-        </div>
-    </section>
+    <!-- More Big Features Sections Here -->
 
     <!-- examples section -->
 
@@ -167,21 +131,13 @@
         <div class="container">
             <div class="examples-header flex">
                 <h2 class="examples-heading-text">One platform, endless possibilities</h2>
-                <a href="#" class="secondary-button">See more examples <i class="fa-solid fa-right-long"></i></a>
+                <a href="#" class="btn btn-secondary">See more examples <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="examples-area flex">
                 <a href="#" class="examples-card">
                     <h3 class="card-text">Can user complete a task in my software interface?</h3>
                 </a>
-                <a class="examples-card" href="#" style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(asset\ 34.jpeg); background-size: cover;">
-                    <h3 class="card-text">Can users find important pages on my website?</h3>
-                </a>
-                <a class="examples-card" href="#">
-                    <h3 class="card-text">Is my website’s intended audience clear? </h3>
-                </a>
-                <a class="examples-card" href="#">
-                    <h3 class="card-text">Do visitors understand what a page is about?</h3>
-                </a>
+                <!-- More Example Cards Here -->
             </div>
         </div>
     </section>
@@ -192,13 +148,13 @@
         <div class="container flex cta-section-container">
             <h2>Start testing today</h2>
             <p>Take the guesswork out of design decisions</p>
-            <a href="#" class="primary-button">Get Started</a>
+            <a href="#" class="btn btn-primary">Get Started</a>
         </div>
     </section>
 
     <!-- footer -->
 
-    <footer>
+    <footer class="bg-dark text-white">
         <div class="container flex footer-container">
             <a href="#" class="company-logo">
                 <img src="./assets/asset 1.png" alt="company logo">
@@ -206,27 +162,9 @@
             <div class="link-column flex">
                 <h4>Product</h4>
                 <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
+                <!-- More Footer Links Here -->
             </div>
-            <div class="link-column flex">
-                <h4>Methodology</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
-            </div>
-            <div class="link-column flex">
-                <h4>Resources</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
-            </div>
+            <!-- More Footer Columns Here -->
         </div>
     </footer>
 
@@ -235,14 +173,12 @@
     <div class="subfooter">
         <div class="container flex subfooter-container">
             <a class="hover-link" href="#">Privacy policy</a>
-            <a class="hover-link" href="#">Terms & Condition</a>
-            <a class="hover-link" href="#">Security Information</a>
-            <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <!-- More Subfooter Links Here -->
         </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/c1fc3d2826.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         const toggleButton = document.getElementById('nav-toggle');
