resolve file issue

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
 </head>
+
 <body>
-    
+
     <!-- top banner -->
 
     <div class="top-banner">
@@ -45,7 +47,8 @@
         <div class="container header-section flex">
             <div class="header-left">
                 <h1>Design Confidently</h1>
-                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
+                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by
+                    validating them with real users.</p>
                 <a href="#" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
@@ -58,7 +61,8 @@
 
     <section class="companies-section">
         <div class="container">
-            <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make better design decisions.</div>
+            <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make better
+                design decisions.</div>
             <div class="logos flex">
                 <img class="logo" src="asset 3.png" alt="">
                 <img class="logo" src="asset 4.png" alt="">
@@ -130,11 +134,12 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users.</p>
             </div>
         </div>
     </section>
-    
+
     <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
@@ -143,7 +148,8 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users.</p>
             </div>
         </div>
     </section>
@@ -156,7 +162,8 @@
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
                 <h3>Design professionals</h3>
-                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.</p>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users.</p>
             </div>
         </div>
     </section>
@@ -173,7 +180,8 @@
                 <a href="#" class="examples-card">
                     <h3 class="card-text">Can user complete a task in my software interface?</h3>
                 </a>
-                <a class="examples-card" href="#" style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 34.jpeg); background-size: cover;">
+                <a class="examples-card" href="#"
+                    style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 34.jpeg); background-size: cover;">
                     <h3 class="card-text">Can users find important pages on my website?</h3>
                 </a>
                 <a class="examples-card" href="#">
@@ -241,6 +249,11 @@
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
+    <footer class="newcl">
+        <p>
+            Copyright © www.UsabilityHub.com
+        </p>
+    </footer>
 
     <script src="https://kit.fontawesome.com/c1fc3d2826.js" crossorigin="anonymous"></script>
 
