resolve conflict issue

--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
         </div>
     </div>
     <footer class="newcl">
-        <p>Copyright © www.UsabilityHub.com</p>
+        <p>
+            Copyright © www.UsabilityHub.com
+        </p>
     </footer>
 
     <script src="https://kit.fontawesome.com/c1fc3d2826.js" crossorigin="anonymous"></script>
