I have fixed the footer at bottom and also added more icons like linkedin, instagram, whatsapp, telegram.

--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
             <a class="hover-link" href="#">Security Information</a>
             <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-telegram"></i></a>
         </div>
     </div>
 
