--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,8 @@
             <input type="text" id="signUpUsername" placeholder="Username" required>
             <input type="email" id="signUpEmail" placeholder="Email" required>
             <input type="password" id="signUpPassword" placeholder="Password" required>
+            <input type="checkbox" name="checkbox" id="checkbox">
+            <label for="">I agree to have read terms of service</label>
             <button type="submit">Sign Up</button>
         </form>
         <p id="signUpError" class="error-message"></p>
