--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a href="#" class="hover-link">Resources</a></li>
                     <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
                     <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
+                    <img src="moon.png" id="icon">
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-link" id="nav-toggle">
@@ -39,7 +40,7 @@
             </a>
         </div>
     </nav>
-
+    
     <!-- header section -->
     <header>
         <div class="container header-section flex">
@@ -65,7 +66,7 @@
                 <img class="logo" src="./assets/asset 5.png" alt="">
                 <img class="logo" src="./assets/asset 6.png" alt="">
                 <img class="logo" src="./assets/asset 7.png" alt="">
-                <img class="logo" src="./assets/asset 8.svg" alt="">
+                <img class="logo1" src="./assets/asset 8.svg" alt="" >
                 <img class="logo" src="./assets/asset 9.png" alt="">
             </div>
         </div>
@@ -252,6 +253,17 @@
             navLinks.classList.toggle('active');
         })
 
+        var icon=document.getElementById("icon")
+
+        icon.onclick=function(){
+            document.body.classList.toggle("dark-theme");
+            if(document.body.classList.contains("dark-theme")){
+                icon.src="sun.png";
+            }
+            else{
+                icon.src="moon.png";
+            }
+        }
     </script>
 
 </body>
