--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <div class="container main-nav flex">
             <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="company logo">
+                <img  src="./assets/asset 1.png" alt="company logo">
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
@@ -49,7 +49,7 @@
                 <a href="#" class="primary-button get-started-btn">Get Started</a>
             </div>
             <div class="header-right">
-                <img src="./assets/asset 2.png" alt="hero image">
+                <img class="main-img" src="./assets/asset 2.png" alt="hero image">
             </div>
         </div>
     </header>
