Update page titles and add favicon to index.html and signup.html

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Usability_Hub</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-queries.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 <body>
     
     <!-- top banner -->
 
-    <div class="top-banner">
+    <!-- <div class="top-banner">
         <div class="container">
             <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
         </div>
-    </div>
+    </div> -->
 
     <!-- nav bar -->
     <nav>
