--- a/signin.html
+++ b/signin.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
-<body>
+<body id="signinPage">
     <div class="containers">
         <h2>Sign In</h2>
         <form id="signInForm">
