--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#" class="hover-link">Customer</a></li>
                     <li><a href="#" class="hover-link">Pricing</a></li>
                     <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
+                    <li><a href="signin.html" class="hover-link secondary-button">Login</a></li>
                     <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
                 </ul>
             </div>
