added social media hover effect icons and made changes in index.html , style.css

--- a/index.html
+++ b/index.html
@@ -254,5 +254,41 @@
 
     </script>
 
+
+<footer>
+    <div class="social-icons-container">
+        <a href="#">
+          <div class="icon">
+            <i class="fab fa-facebook-square"></i>
+          </div>
+  
+          <div class="name">Facebook</div>
+        </a>
+  
+        <a href="#">
+          <div class="icon">
+            <i class="fab fa-twitter-square"></i>
+          </div>
+  
+          <div class="name">Twitter</div>
+        </a>
+  
+        <a href="#">
+          <div class="icon">
+            <i class="fab fa-instagram-square"></i>
+          </div>
+  
+          <div class="name">Instagram</div>
+        </a>
+  
+        <a href="#">
+          <div class="icon">
+            <i class="fab fa-youtube-square"></i>
+          </div>
+  
+          <div class="name">YouTube</div>
+        </a>
+      </div>
+</footer>
 </body>
 </html>
