Multiple changes in Contributing.md file(Typo) and added a little changes to the button changing the color and adding box shadow

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#" class="hover-link">Customer</a></li>
                     <li><a href="#" class="hover-link">Pricing</a></li>
                     <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
-                    <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
+                    <li><a href="signin.html" class="hover-link secondary-button" style="box-shadow: 2px 2px 8px black">Sign in</a></li>
+                    <li><a href="signup.html" class="hover-link primary-button" style="box-shadow:2px 2px 8px rgb(21, 21, 79);">Sign up</a></li>
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-link" id="nav-toggle">
@@ -84,13 +84,13 @@
                     <img src="./assets/asset 11.svg" alt="">
                     <h3>Card Sorting</h3>
                     <p>Discover how people group and label information.</p>
-                    <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
+                    <a href="https://www.nngroup.com/articles/card-sorting-definition/" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 13.svg" alt="">
                     <h3>Prototype tests</h3>
                     <p>Discover how people navigate your Figma prototypes.</p>
-                    <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
+                    <a href="https://theproductmanager.com/topics/prototyping-vs-wireframing/#:~:text=A%20prototype%20is%20something%20that,use%20of%20the%20actual%20design." class="secondary-button">Learn more <i class="fa-solid fa-right-long"></i></a>
                 </div>
                 <div class="features-card flex">
                     <img src="./assets/asset 14.svg" alt="">
