--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <div class="header-left">
                 <h1>Design Confidently</h1>
                 <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button get-started-btn">Get Started</a>
+                <a href="#" class="primary-button get-started-btn" style="box-shadow: 1.5px 1.5px 8px black;">Get Started</a>
+
+          
+
             </div>
             <div class="header-right">
                 <img src="./assets/asset 2.png" alt="hero image">
