Added social media icons

--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
             <a class="hover-link" href="#">Security Information</a>
             <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="hover-link" href="https://www.linkedin.com/in/rajan-kumar-barnwal-b0b113216/"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-discord"></i></a>
+            <a class="hover-link" href="https://github.com/Rajan-Barnwal"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
 
