navbar functionality is modified

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-">
         <div class="container-fluid">
         <!--<div class="container main-nav flex">-->
             <a href="#" class="company-logo">
@@ -29,11 +29,11 @@
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
-                    <li><a href="#" class="hover-link">Products</a></li>
-                    <li><a href="#" class="hover-link">Customer</a></li>
-                    <li><a href="#" class="hover-link">Pricing</a></li>
-                    <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
+                    <li><a href="products.html" class="hover-link">Products</a></li>
+                    <li><a href="customers.html" class="hover-link">Customer</a></li>
+                    <li><a href="pricing.html" class="hover-link">Pricing</a></li>
+                    <li><a href="resources.html" class="hover-link">Resources</a></li>
+                    <li><a href="signin.html" class="hover-link primary-button">Sign in</a></li>
                     <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
                     <img src="moon.png" id="icon">
                 </ul>
