relevant commit message

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#" class="hover-link">Customer</a></li>
                     <li><a href="#" class="hover-link">Pricing</a></li>
                     <li><a href="#" class="hover-link">Resources</a></li>
-                    <li><a href="signin.html" class="hover-link secondary-button">Sign in</a></li>
+                    <li><a href="signin.html" class="hover-link secondary-button">Log in</a></li>
                     <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
                     <img src="moon.png" id="icon">
                 </ul>
