--- a/index.html
+++ b/index.html
@@ -204,32 +204,52 @@
 
     <footer>
         <div class="container flex footer-container">
-            <a href="#" class="company-logo">
-                <img src="./assets/asset 1.png" alt="company logo">
-            </a>
+            <div class="link-col flex">
+                <a href="#" class="company-logo">
+                    <img src="./assets/asset 1.png" alt="company logo">
+                </a>
+
+                <!-- Feedback Form -->
+                <div class="feedback">
+                    <form action="" class="contact-left feedback">
+                    <h4>Feedback Form</h4>
+                    <div class="id">
+                        <input type="text" name="name" placeholder="Your Name" class="contact-inputs feedback-name" required>
+                        <i class="far fa-user"></i>
+                    </div>
+                    <div class="id">
+                        <input type="email" name="email" placeholder="Your Email" class="contact-inputs feedback-email" required>
+                        <i class="far fa-envelope"></i>
+                        <textarea name="feedback" placeholder="Your Feedback" class="contact-inputs" required></textarea>
+                        <button type="submit">Submit</button>
+                    </div>
+                    </form>   
+                </div>
+            </div>
+
             <div class="link-column flex">
                 <h4>Product</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
+                <a href="#" class="fhover-link">Overview</a>
+                <a href="#" class="fhover-link">Pricing</a>
+                <a href="#" class="fhover-link">Usability Hub</a>
+                <a href="#" class="fhover-link">Customers Page</a>
+                <a href="#" class="fhover-link">Status Page</a>
             </div>
             <div class="link-column flex">
                 <h4>Methodology</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
+                <a href="#" class="fhover-link">Overview</a>
+                <a href="#" class="fhover-link">Pricing</a>
+                <a href="#" class="fhover-link">Usability Hub</a>
+                <a href="#" class="fhover-link">Customers Page</a>
+                <a href="#" class="fhover-link">Status Page</a>
             </div>
             <div class="link-column flex">
                 <h4>Resources</h4>
-                <a href="#" class="hover-link">Overview</a>
-                <a href="#" class="hover-link">Pricing</a>
-                <a href="#" class="hover-link">Usability Hub</a>
-                <a href="#" class="hover-link">Customers Page</a>
-                <a href="#" class="hover-link">Status Page</a>
+                <a href="#" class="fhover-link">Overview</a>
+                <a href="#" class="fhover-link">Pricing</a>
+                <a href="#" class="fhover-link">Usability Hub</a>
+                <a href="#" class="fhover-link">Customers Page</a>
+                <a href="#" class="fhover-link">Status Page</a>
             </div>
         </div>
     </footer>
@@ -238,11 +258,11 @@
 
     <div class="subfooter">
         <div class="container flex subfooter-container">
-            <a class="hover-link" href="#">Privacy policy</a>
-            <a class="hover-link" href="#">Terms & Condition</a>
-            <a class="hover-link" href="#">Security Information</a>
-            <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="fhover-link" href="#">Privacy policy</a>
+            <a class="fhover-link" href="#">Terms & Condition</a>
+            <a class="fhover-link" href="#">Security Information</a>
+            <a class="fhover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a class="fhover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
 
