Add hover effect and responsive design to example section with fixed bug

--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
             </div>
         </div>
     </section>
-
-    <!-- examples section -->
-
+<!-- examples section -->
     <section class="examples-section">
         <div class="container">
             <div class="examples-header flex">
@@ -174,16 +172,16 @@
                 <a href="#" class="secondary-button">See more examples <i class="fa-solid fa-right-long"></i></a>
             </div>
             <div class="examples-area flex">
-                <a href="#" class="examples-card">
+                <a href="#" class="examples-card" style="background-color: #ADD8E6;"> <!-- light blue -->
                     <h3 class="card-text">Can user complete a task in my software interface?</h3>
                 </a>
-                <a class="examples-card" href="#" style="background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(asset\ 34.jpeg); background-size: cover;">
+                <a class="examples-card" href="#" style="background-color: #F7DC6F;"> <!-- light yellow -->
                     <h3 class="card-text">Can users find important pages on my website?</h3>
                 </a>
-                <a class="examples-card" href="#">
+                <a class="examples-card" href="#" style="background-color: #C6F7D0;"> <!-- light green -->
                     <h3 class="card-text">Is my website’s intended audience clear? </h3>
                 </a>
-                <a class="examples-card" href="#">
+                <a class="examples-card" href="#" style="background-color: #FFC5C5;"> <!-- light red -->
                     <h3 class="card-text">Do visitors understand what a page is about?</h3>
                 </a>
             </div>
