relevant commit message

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Job Portal</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -12,16 +12,9 @@
 </head>
 <body>
     
-    <!-- top banner -->
-
-    <div class="top-banner">
-        <div class="container">
-            <div class="small-bold-text banner-text">🥳 New to Usability Hub: Open and Closed card sorting</div>
-        </div>
-    </div>
 
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-blue">
         <div class="container-fluid">
         <!--<div class="container main-nav flex">-->
             <a href="#" class="company-logo">
@@ -35,7 +28,6 @@
                     <li><a href="#" class="hover-link">Resources</a></li>
                     <li><a href="signin.html" class="hover-link secondary-button">Log in</a></li>
                     <li><a href="signup.html" class="hover-link primary-button">Sign up</a></li>
-                    <img src="moon.png" id="icon">
                 </ul>
             </div>
             <a href="#" class="nav-toggle hover-link" id="nav-toggle">
