relevant commit message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="header-left">
                 <h1>Design Confidently</h1>
                 <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
-                <a href="#" class="primary-button get-started-btn">Get Started</a>
+                <a href="#" class="primary-button get-started-btn"><button class="get">Get Started</button></a>
             </div>
             <div class="header-right">
                 <img src="./assets/asset 2.png" alt="hero image">
@@ -75,7 +75,7 @@
                 <h2 class="features-heading-text">Your user research Swiss Army knife</h2>
                 <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
             </div>
-            <div class="features-area flex">
+            <div class="features-area flex" >
                 <div class="features-card flex">
                     <img src="./assets/asset 11.svg" alt="">
                     <h3>Card Sorting</h3>
